# video-auto-editor

./: .dockerignore  .gitignore  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  main.py
src/api/: __init__.py  models.py  routes.py
src/core/: __init__.py  config.py
src/services/: __init__.py  file_manager.py  video_processor.py
streamlit_app/: __init__.py  app.py
tests/: __init__.py  test_api.py  test_video_processor.py
